# CandleStick-Detection-CNN-ViT

./: .gitignore  README.md  inference.txt  main.py  pyproject.toml
configs/: dataset.yaml  patterns.yaml  tickers.txt  training.yaml
models/comparison/: detailed_comparison.csv
scripts/: cli.py  compare_models.py  model_info.py  train_cnn.py  train_vit.py
src/detect_candlestick/: __init__.py  build_dataset.py  data_fetch.py  label_patterns.py  split.py
src/detect_candlestick/models/: __init__.py  cnn.py  vit.py
src/detect_candlestick/rendering/: __init__.py  renderer.py
src/detect_candlestick/training/: __init__.py  datasets.py
